# AR-with-OpenCV

./: README.md
ArUco/: CMakeLists.txt  ChangeLog  README  androidcompile.sh
ArUco/cmake/: config.cmake.in  findDependencies.cmake  options.cmake
ArUco/src/: dictionary.cpp  markerdetector.cpp
ArUco/tests/: CMakeLists.txt  speed_test.cpp
ArUco/utils/: CMakeLists.txt  aruco_test.cpp
ArUco/utils_calibration/: CMakeLists.txt  aruco_calibration.cpp  aruco_calibration_fromimages.cpp
ArUco/utils_gl/: CMakeLists.txt  aruco_test_gl.cpp  aruco_test_markermap_gl.cpp
ArUco/utils_markermap/: CMakeLists.txt  aruco_test_markermap.cpp
ArUco/utils_svm/: CMakeLists.txt  aruco_test_svm.cpp
SURF-AR/: main.cpp  myAr_surf.cpp  v1.cpp  v3.2.cpp  v3.cpp  v4.1.cpp  v4.2.cpp  v4.cpp
SurfAR/: CMakeLists.txt  SurfAR.kdev4  cam.cpp  v1.cpp  v2.cpp  v3.1.cpp  v3.cpp  v4.cpp
SurfAR/.kdev4/: SurfAR.kdev4  test0126.kdev4
markerAr/: CMakeLists.txt  README.md  main.cpp  v0_1_video.cpp  v0_2_cam.cpp  v1.0.cpp  v1_process.cpp  v2.0.cpp  v2_outline.cpp  v3.0.cpp  v3_warpPerspective.cpp  v4.0.cpp  v4_coordinate.cpp  v5_myWarpPerspective.cpp
markerAr/calibrate/: in_camera0.xml  out_camera_data.xml
